# HotTake

./: .gitignore  README.md  main.py  pyproject.toml
ghost-writer-py/: app.py  generator.py  log.py  main.py  publisher.py  schedule.py  trends.py
ghost-writer-py/.claude/: settings.local.json
hottake/: generator.py  main.py
