[project]
name = "ghost-writer-py"
version = "0.1.2"
description = "Ghostwriter"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "beautifulsoup4>=4.14.2",
    "flask>=3.1.2",
    "google-auth>=2.41.1",
    "gspread>=6.2.1",
    "openai>=2.6.1",
    "pytrends>=4.9.2",
    "requests>=2.32.5",
    "schedule>=1.2.2",
]
